fixed overflow-x

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
   height: 100%;
   background-color: black;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 body {
